--- a/.github/workflows/jmeter-csv-workflow.yml
+++ b/.github/workflows/jmeter-csv-workflow.yml
@@ -1,6 +1,9 @@
 name: Run JMeter Tests with CSV test data
 
 on:
+  push:
+    branches:
+      - main  # Run tests on pushes to the main branch
   workflow_dispatch: # Allow manual trigger of this workflow
 
 jobs:
