--- a/.github/workflows/jmeter-plugin-workflow.yml
+++ b/.github/workflows/jmeter-plugin-workflow.yml
@@ -1,10 +1,10 @@
-name: Run JMeter Tests with CSV test data
+name: Run JMeter Tests with Plugins
 
-#on:
-#  push:
-#    branches:
-#      - main  # Run tests on pushes to the main branch
-#  workflow_dispatch: # Allow manual trigger of this workflow
+on:
+  push:
+    branches:
+      - main  # Run tests on pushes to the main branch
+  workflow_dispatch: # Allow manual trigger of this workflow
 
 jobs:
   run-jmeter-tests:
@@ -13,7 +13,7 @@ jobs:
     env:
       JMETER_VERSION: "5.6.3"
       JMETER_HOME: "${HOME}/jmeter"
-      TEST_PLAN_PATH: "test-plan/test-plan-example-data-driven-test-csv.jmx"
+      TEST_PLAN_PATH: "test-plan/test-plan-example-plugins.jmx"
       TEST_REPORT_FOLDER: "results"
 
 
@@ -36,10 +36,8 @@ jobs:
           mv apache-jmeter-${JMETER_VERSION} ~/jmeter
 
       # Step 4: Copy JMeter Plugins from repository to JMeter lib and lib/ext
-      - name: Copy JMeter plugins, libraries and test data
+      - name: Copy JMeter Plugins and Libraries
         run: |
-          echo "Copying test data to ~/jmeter/bin folder"
-          cp -r ./test-data/* ./test-plan/
           echo "Copying plugins to lib/ext folder"
           cp -r ./lib/ext/* ~/jmeter/lib/ext/  
           echo "Copying libraries to lib folder"
