--- a/.github/workflows/jmeter-properties-workflow.yml
+++ b/.github/workflows/jmeter-properties-workflow.yml
@@ -1,10 +1,10 @@
-name: Run JMeter Tests with CSV test data
+name: Run JMeter Tests with properties
 
-#on:
-#  push:
-#    branches:
-#      - main  # Run tests on pushes to the main branch
-#  workflow_dispatch: # Allow manual trigger of this workflow
+on:
+  push:
+    branches:
+      - main  # Run tests on pushes to the main branch
+  workflow_dispatch: # Allow manual trigger of this workflow
 
 jobs:
   run-jmeter-tests:
@@ -13,7 +13,7 @@ jobs:
     env:
       JMETER_VERSION: "5.6.3"
       JMETER_HOME: "${HOME}/jmeter"
-      TEST_PLAN_PATH: "test-plan/test-plan-example-data-driven-test-csv.jmx"
+      TEST_PLAN_PATH: "test-plan/test-plan-example-properties.jmx"
       TEST_REPORT_FOLDER: "results"
 
 
@@ -38,6 +38,8 @@ jobs:
       # Step 4: Copy JMeter Plugins from repository to JMeter lib and lib/ext
       - name: Copy JMeter plugins, libraries and test data
         run: |
+          echo "Copying configuration files to ~/jmeter/bin "
+          cp -r ./conf/* ~/jmeter/bin 
           echo "Copying test data to ~/jmeter/bin folder"
           cp -r ./test-data/* ./test-plan/
           echo "Copying plugins to lib/ext folder"
@@ -49,7 +51,7 @@ jobs:
       - name: Run JMeter test plan and generate HTML reports
         run: |
           mkdir -p ${{ env.TEST_REPORT_FOLDER }}
-          $HOME/jmeter/bin/jmeter -n -t ${{ env.TEST_PLAN_PATH }} -l ${{ env.TEST_REPORT_FOLDER }}/results.csv -j ${{ env.TEST_REPORT_FOLDER }}/jmeter.log -e -f -o ${{ env.TEST_REPORT_FOLDER }}/reports
+          $HOME/jmeter/bin/jmeter -n -t ${{ env.TEST_PLAN_PATH }} -l ${{ env.TEST_REPORT_FOLDER }}/results-cli.jtl -j ${{ env.TEST_REPORT_FOLDER }}/jmeter-cli.log
 
 
       # Step 6: Move XML test result file to results folder (if exists)
