--- a/.github/workflows/jmeter-plugin-workflow.yml
+++ b/.github/workflows/jmeter-plugin-workflow.yml
@@ -1,9 +1,9 @@
 name: Run JMeter Tests with Plugins
 
 on:
-  push:
-    branches:
-      - main  # Run tests on pushes to the main branch
+#  push:
+#    branches:
+#      - main  # Run tests on pushes to the main branch
   workflow_dispatch: # Allow manual trigger of this workflow
 
 jobs:
